Camera correctly uploads images to database, database handler formatting changes, all data is correctly present in database now. Removed second height box from profiledetail2, imported firebase Storage in build.gradle.

--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -123,6 +123,6 @@
         <item>207</item>
         <item>208</item>
         <item>209</item>
-        <item>"210&gt;"</item>
+        <item>">210"</item>
     </string-array>
 </resources>
